salgu/core/auth-headless-service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-headless-service
  namespace: core
spec:
  clusterIP: None
  externalName: auth.auth.svc.cluster.local
