salgu/core/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: core
  labels:
    app: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: auth
            port:
              number: 18081
#            name: auth-headless-service
#            port:
#              number: 18081

#      - pathType: Prefix
#        path: /api
#        backend:
#          service:
#            name: api
#            port:
#              number: 18080
